# SFML-Game

./: CMakeLists.txt  Collider.cpp  Collider.h  Collision.cpp  Collision.h  Effect.cpp  Effect.h  Main.cpp  Menu.cpp  Menu.h  Player.cpp  Player.h  README.md  TileCover.cpp  TileCover.h  View.cpp  View.h
Enemies/: Enemy.cpp  Enemy.h
Enemies/Types/: Error.cpp  Error.h  ExceptionThrower.cpp  ExceptionThrower.h  Knowledge.cpp  Knowledge.h  SyntaxError.cpp  SyntaxError.h
Files/Save/: Save.txt
Utility/: RNG.cpp  RNG.h  Updatable.cpp  Updatable.h  Usable.cpp  Usable.h
Weapons/: Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.h
Weapons/Types/: CollisionTrigger.cpp  CollisionTrigger.h  Debugger.cpp  Debugger.h  ThreadManager.cpp  ThreadManager.h
